# Algorithm

./: CMakeLists.txt
Array/: array_3.cpp  dice_game.cpp  offset.cpp  point_calc.cpp  triangle_1.cpp  triangle_3.cpp  triangle_last.cpp
BFS/: BFS_DFS.cpp  BFS_example.cpp  maze.cpp  weird_calc.cpp
DFS/: binaryGraph.cpp  find_same_ancestor.cpp  numbering_house.cpp  worm_virus.cpp
Dijkstra/: party.cpp  shortest_path.cpp  specific_short_path.cpp
Dynamic_Programming/: ball_game.cpp  button.cpp  card_game.cpp  collect_mineral.cpp  fill_the_block.cpp  getFibo.cpp  make_number.cpp  make_number_2.cpp  rectangle_fit.cpp  square_number.cpp  str_distance.cpp
MST_Kruskal/: friend.cpp  kruscal.cpp
Simple_Brutal_Force/: attack_range.cpp  baseball_game.cpp  bingo.cpp  class_president.cpp  color_paper.cpp  matrix_inverse.cpp  maxofarr.cpp  rook.cpp
Stack_Queue/: circleQueue.cpp  parenthesis_string.cpp  stack.cpp
String/: lower_upper.cpp  mess_up.cpp  pelindrom.cpp  string_include.cpp  string_inverse.cpp  string_zip.cpp
function/: binary.cpp  factorial.cpp  permutation.cpp
