cmake_minimum_required(VERSION 3.22)
project(Algorithm)

set(CMAKE_CXX_STANDARD 14)

#add_executable(Algorithm
#        BFS/BFS_example.cpp)
add_executable(BFS_BFS_example BFS/BFS_example.cpp)
add_executable(BFS_BFS_DFS BFS/BFS_DFS.cpp)
add_executable(BFS_weird_calc BFS/weird_calc.cpp)
add_executable(BFS_maze BFS/maze.cpp)
add_executable(Array_triangle_1 Array/triangle_1.cpp)
add_executable(Array_triangle_3 Array/triangle_3.cpp)
add_executable(Array_triangle_last Array/triangle_last.cpp)
add_executable(Array_dice_game Array/dice_game.cpp)
add_executable(Array_point_calc Array/point_calc.cpp)
add_executable(Array_array_3 Array/array_3.cpp)
add_executable(Simple_Brutal_Force_maxofarr Simple_Brutal_Force/maxofarr.cpp)
add_executable(Array_offset Simple_Brutal_Force/offset.cpp)
add_executable(Array_class_president Simple_Brutal_Force/class_president.cpp)
add_executable(Stack_Queue_stack Stack_Queue/stack.cpp)
add_executable(Stack_Queue_circleQueue Stack_Queue/circleQueue.cpp)
add_executable(Stack_Queue_parenthesis_string Stack_Queue/parenthesis_string.cpp)
add_executable(DFS_binaryGraph DFS/binaryGraph.cpp)
add_executable(DFS_worm_virus DFS/worm_virus.cpp)
add_executable(DFS_find_same_ancestor DFS/find_same_ancestor.cpp)
add_executable(DFS_numbering_house DFS/numbering_house.cpp)
add_executable(Simple_Brutal_Force_attack_range Simple_Brutal_Force/attack_range.cpp)
add_executable(Simple_Brutal_Force_color_paper Simple_Brutal_Force/color_paper.cpp)
add_executable(Simple_Brutal_Force_rook Simple_Brutal_Force/rook.cpp)
add_executable(Simple_Brutal_Force_matrix_inverse Simple_Brutal_Force/matrix_inverse.cpp)
add_executable(String_lower_upper String/lower_upper.cpp)
add_executable(Dijkstra_shortest_path Dijkstra/shortest_path.cpp)
add_executable(Dijkstra_specific_short_path Dijkstra/specific_short_path.cpp)
add_executable(Dijkstra_party Dijkstra/party.cpp)
add_executable(Dynamic_Programming_getFibo Dynamic_Programming/getFibo.cpp)
add_executable(Dynamic_Programming_fill_the_block Dynamic_Programming/fill_the_block.cpp)
add_executable(Dynamic_Programming_make_number Dynamic_Programming/make_number.cpp)
add_executable(Dynamic_Programming_rectangle_fit Dynamic_Programming/rectangle_fit.cpp)
add_executable(Dynamic_Programming_make_number_2 Dynamic_Programming/make_number_2.cpp)